--- a/index.html
+++ b/index.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>苗苗</title>
+	<meta charset="UTF-8">
+	<title>苗苗</title>
 </head>
+<link rel="stylesheet" type="text/css" href="css/main.css">
 <body>
-  <h3>个人主页</h3>
+	<div class="main">
+  <!-- 个人信息 -->
+    <h2 class="title" id="info">牛苗苗</h2>
+    <div class="iconbox">
+      <a class="socialIcon" target="_blank" href="https://www.baidu.com"></a>
+    </div>
+    <div class="person-info">
+      <p><b>申请职位：</b>前端工程师</p>
+      <p><b>年龄：</b>26</p>
+      <p><b>住址：</b>北京市昌平区天通苑</p>
+      <p><b>电话：</b>18519011499</p>
+      <p><b>邮箱：</b>515454453@qq.com</p>
+    </div>
+    <!-- 掌握技能 -->
+    <h2 class="title" id="skills">掌握技能</h2>
+    <div class="skillbox">
+      <div class="basicintro">
+        <label class="color1"></label>掌握
+        <label class="color2"></label>了解
+      </div>
+      <p class="skill-title">基础部分：</p>
+      <span id="color1">PhotoShop</span>
+      <span id="color1">HTML</span>
+      <span id="color1">CSS(Sass,Less,PostScss)</span>
+      <span id="color1">Javascript</span>
+      <p class="skill-title">框架部分：</p>
+      <span id="color1">Jquery</span>
+      <span id="color1">Bootstrap</span>
+      <span id="color1">Element</span>
+      <span id="color1">Vue.js</span>
+      <span id="color1">Vue-router</span>
+      <span id="color2">Node.js</span>
+      <span id="color2">Angular.js</span>
+      <p class="skill-title">前端工具&其他：</p>
+      <span id="color1">es6</span>
+      <span id="color1">微信小程序</span>
+      <span id="color1">Webpack</span>
+      <span id="color1">Git</span>
+    </div>
+    <!-- 工作经历 -->
+    <h2 class="title" id="expre">工作经历</h2>
+    <div class="exprebox">
+      <div class="left">
+        北京云族佳科技有限公司<br/>
+        2015.10--至今<br/>
+        前端工程师
+      </div>
+      <div class="right">
+        <ul>
+          <li>负责业务层代码，前端数据输出，与后端工程师沟通调试接口数据</li>
+          <li>承担公司日常PC站业务开发，手机站开发，承担日常线上运营活动开发。</li>
+        </ul>
+      </div>
+    </div>
+    <div class="exprebox">
+      <div class="left">
+        北京百金贷科技有限公司<br/>
+        2014.11--2015.9 <br/>
+        前端工程师
+      </div>
+      <div class="right">
+        <ul>
+          <li>负责产品的前端页面开发和优化</li>
+          <li>与设计、产品人员沟通，保证产品的质量和开发进度</li>
+          <li>优化前端性能，确保web用户界面在多浏览器环境中正常工作</li>
+          <li>负责与后端工程师沟通协作，调试数据接口</li>
+        </ul>
+      </div>
+    </div>
+    <div class="exprebox last-child">
+      <div class="left">
+        河南锐之旗信息技术有限公司<br/>
+        2013.07--2014.10<br/>
+        网页设计师
+      </div>
+      <div class="right">
+        <ul>
+          <li>负责公司模板网站网页设计与前端代码设计</li>
+          <li>配合后台开发人员实现产品界面和功能。</li>
+        </ul>
+      </div>
+    </div>
+    <!-- 项目经验 -->
+    <h2 class="title" id="project">项目经验</h2>
+    <div class="projectbox">
+      云沃客 <a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
+      <p>
+        <span>项目描述：</span>在项目当中主要负责业务代码的实现，组件开发，公共指令开发，项目采用MVVM框架VUE，相对于Angular.js来说，VUE比较轻量，学习成本低，入手快，项目中对应使用vue-validator进行表单验证，都很大程序上减少了对DOM的直接操作，整个项目使用webpack进行包管理（node-sass这个包真的好难装），自动化可以让开发人员使用更新的技术，投入更的精力在业务上，统一的编码规范，让代码更有利维护，使用git来进行项目版本管理，让多人开发协作更方便有利。
+      </p>
+      <p>
+        <span>涉及技能：</span>
+        <label>html</label>
+        <label>css</label>
+        <label>jquery</label>
+        <label>vue</label>
+        <label>webpack</label>
+        <label>git</label>
+      </p>
+    </div>
+    <div class="projectbox">
+      云沃客m站  手机访问<a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
+      <p>
+        <span>项目描述：</span>在项目当中主要负责业务代码的实现，组件开发，公共指令开发，项目采用MVVM框架VUE，相对于Angular.js来说，VUE比较轻量，学习成本低，入手快，项目中对应使用vue-validator进行表单验证，都很大程序上减少了对DOM的直接操作，整个项目使用webpack进行包管理（node-sass这个包真的好难装），自动化可以让开发人员使用更新的技术，投入更的精力在业务上，统一的编码规范，让代码更有利维护，使用git来进行项目版本管理，让多人开发协作更方便有利。
+      </p>
+      <p>
+        <span>涉及技能：</span>
+        <label>html</label>
+        <label>css</label>
+        <label>jquery</label>
+        <label>vue</label>
+        <label>webpack</label>
+        <label>git</label>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
