--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
       <p>
         <span>涉及技能：</span>
         <label>html</label>
-        <label>css</label>
+        <label>scss</label>
         <label>jquery</label>
-        <label>vue</label>
+        <label>vue1.0</label>
         <label>webpack</label>
         <label>git</label>
       </p>
@@ -108,17 +108,47 @@
     <div class="projectbox">
       云沃客m站  手机访问<a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
       <p>
-        <span>项目描述：</span>在项目当中主要负责业务代码的实现，组件开发，公共指令开发，项目采用MVVM框架VUE，相对于Angular.js来说，VUE比较轻量，学习成本低，入手快，项目中对应使用vue-validator进行表单验证，都很大程序上减少了对DOM的直接操作，整个项目使用webpack进行包管理（node-sass这个包真的好难装），自动化可以让开发人员使用更新的技术，投入更的精力在业务上，统一的编码规范，让代码更有利维护，使用git来进行项目版本管理，让多人开发协作更方便有利。
+        <span>项目描述：</span>负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
       </p>
       <p>
         <span>涉及技能：</span>
         <label>html</label>
-        <label>css</label>
+        <label>scss</label>
         <label>jquery</label>
-        <label>vue</label>
+        <label>vue1.0</label>
+        <label>vue-router</label>
+        <label>vuex</label>
         <label>webpack</label>
         <label>git</label>
       </p>
+    </div>
+    <div class="projectbox last-child">
+      云沃客后台管理系统
+      <p>
+        <span>项目描述：</span>负责页面应用搭建、业务代码开发，组件开发，后台UI框架使用基于Vue的Element，由于没仔细看文档，导致做的过程当中遇到一个自定义列的问题纠结了很久，所以开发前，了解所用框架的基础功能，理清项目流程是很有必要的，虽然前期花费时间，但是有助于整体项目的把控，及开发速率
+      </p>
+      <p>
+        <span>涉及技能：</span>
+        <label>html</label>
+        <label>scss</label>
+        <label>vue2.0</label>
+        <label>vue-router</label>
+        <label>webpack</label>
+        <label>git</label>
+      </p>
+    </div>
+    <!-- 教育经历 -->
+    <h2 class="title" id="edu">教育经历</h2>
+    <div class="edubox">
+      <div class="left">
+        郑州师范学院
+      </div>
+      <div class="right">
+        2010.9--2013.6
+      </div>
+      <div class="right">
+        计算机网络
+      </div>
     </div>
   </div>
 </body>
