--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 个人信息 -->
     <h2 class="title" id="info">牛苗苗</h2>
     <div class="iconbox">
-      <a class="socialIcon" target="_blank" href="https://www.baidu.com"></a>
+      <a class="socialIcon" id="personPhoto"></a>
     </div>
     <div class="person-info">
       <p><b>申请职位：</b>前端工程师</p>
@@ -91,12 +91,12 @@
     <!-- 项目经验 -->
     <h2 class="title" id="project">项目经验</h2>
     <div class="projectbox">
-      云沃客 <a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
+    <span class="smalltitle">云沃客</span> <a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
       <p>
-        <span>项目描述：</span>在项目当中主要负责业务代码的实现，组件开发，公共指令开发，项目采用MVVM框架VUE，相对于Angular.js来说，VUE比较轻量，学习成本低，入手快，项目中对应使用vue-validator进行表单验证，都很大程序上减少了对DOM的直接操作，整个项目使用webpack进行包管理（node-sass这个包真的好难装），自动化可以让开发人员使用更新的技术，投入更的精力在业务上，统一的编码规范，让代码更有利维护，使用git来进行项目版本管理，让多人开发协作更方便有利。
+        <span class="detail">项目描述：</span>在项目当中主要负责业务代码的实现，组件开发，公共指令开发，项目采用MVVM框架VUE，相对于Angular.js来说，VUE比较轻量，学习成本低，入手快，项目中对应使用vue-validator进行表单验证，都很大程序上减少了对DOM的直接操作，整个项目使用webpack进行包管理（node-sass这个包真的好难装），自动化可以让开发人员使用更新的技术，投入更的精力在业务上，统一的编码规范，让代码更有利维护，使用git来进行项目版本管理，让多人开发协作更方便有利。
       </p>
       <p>
-        <span>涉及技能：</span>
+        <span class="detail">涉及技能：</span>
         <label>html</label>
         <label>scss</label>
         <label>jquery</label>
@@ -106,12 +106,12 @@
       </p>
     </div>
     <div class="projectbox">
-      云沃客m站  手机访问<a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
+      <span class="smalltitle">云沃客m站</span>  手机访问<a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
       <p>
-        <span>项目描述：</span>负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
+        <span class="detail">项目描述：</span>负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
       </p>
       <p>
-        <span>涉及技能：</span>
+        <span class="detail">涉及技能：</span>
         <label>html</label>
         <label>scss</label>
         <label>jquery</label>
@@ -123,17 +123,31 @@
       </p>
     </div>
     <div class="projectbox last-child">
-      云沃客后台管理系统
+      <span class="smalltitle">云沃客后台管理系统</span>
       <p>
-        <span>项目描述：</span>负责页面应用搭建、业务代码开发，组件开发，后台UI框架使用基于Vue的Element，由于没仔细看文档，导致做的过程当中遇到一个自定义列的问题纠结了很久，所以开发前，了解所用框架的基础功能，理清项目流程是很有必要的，虽然前期花费时间，但是有助于整体项目的把控，及开发速率
+        <span class="detail">项目描述：</span>负责页面应用搭建、业务代码开发，组件开发，后台UI框架使用基于Vue的Element，由于没仔细看文档，导致做的过程当中遇到一个自定义列的问题纠结了很久，所以开发前，了解所用框架的基础功能，理清项目流程是很有必要的，虽然前期花费时间，但是有助于整体项目的把控，及开发速率
       </p>
       <p>
-        <span>涉及技能：</span>
+        <span class="detail">涉及技能：</span>
         <label>html</label>
         <label>scss</label>
         <label>vue2.0</label>
         <label>vue-router</label>
         <label>webpack</label>
+        <label>git</label>
+      </p>
+    </div>
+    <div class="projectbox last-child">
+      <span class="smalltitle">云沃客微信小程序</span>  微信APP最新版，小程序入口搜索<span>云沃客</span>
+      <p>
+        <span class="detail">项目描述：</span>本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件,
+
+      </p>
+      <p>
+        <span class="detail">涉及技能：</span>
+        <label>html</label>
+        <label>css</label>
+        <label>微信小程序</label>
         <label>git</label>
       </p>
     </div>
