--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <body>
+  <div class="sticker">
+    <h2 class="titleName">牛苗苗</h2>
+    <h2 class="myphone">
+      <a class="phoneIcon"></a>18519011499
+    </h2>
+  </div>
 	<div class="main">
   <!-- 个人信息 -->
     <h2 class="title" id="info">牛苗苗</h2>
@@ -165,5 +171,9 @@
       </div>
     </div>
   </div>
+
+  <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="js/custom.js"></script>
+  <script type="text/javascript" src="js/backPosition.js"></script>
 </body>
 </html>
