--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
         <label class="color2"></label>了解
       </div>
       <p class="skill-title">基础部分：</p>
-      <span id="color1">PhotoShop</span>
-      <span id="color1">HTML</span>
-      <span id="color1">CSS(Sass,Less,PostScss)</span>
-      <span id="color1">Javascript</span>
+      <span class="skills1">PhotoShop</span>
+      <span class="skills1">HTML</span>
+      <span class="skills1">CSS(Sass,Less,PostScss)</span>
+      <span class="skills1">Javascript</span>
       <p class="skill-title">框架部分：</p>
-      <span id="color1">Jquery</span>
-      <span id="color1">Bootstrap</span>
-      <span id="color1">Element</span>
-      <span id="color1">Vue.js</span>
-      <span id="color1">Vue-router</span>
-      <span id="color2">Node.js</span>
-      <span id="color2">Angular.js</span>
+      <span class="skills1">Jquery</span>
+      <span class="skills1">Bootstrap</span>
+      <span class="skills1">Element</span>
+      <span class="skills1">Vue.js</span>
+      <span class="skills1">Vue-router</span>
+      <span class="skills2">Node.js</span>
+      <span class="skills2">Angular.js</span>
       <p class="skill-title">前端工具&其他：</p>
-      <span id="color1">es6</span>
-      <span id="color1">微信小程序</span>
-      <span id="color1">Webpack</span>
-      <span id="color1">Git</span>
+      <span class="skills1">es6</span>
+      <span class="skills1">微信小程序</span>
+      <span class="skills1">Webpack</span>
+      <span class="skills1">Git</span>
     </div>
     <!-- 工作经历 -->
     <h2 class="title" id="expre">工作经历</h2>
@@ -84,7 +84,7 @@
     <div class="exprebox last-child">
       <div class="left">
         河南锐之旗信息技术有限公司<br/>
-        2013.07--2014.10<br/>
+        2012.07--2014.10<br/>
         网页设计师
       </div>
       <div class="right">
@@ -143,11 +143,27 @@
         <label>git</label>
       </p>
     </div>
+    <!-- 在么 -->
+    <div class="projectbox">
+    <span class="smalltitle">在么社区</span>
+      <a target="_blank" href="https://z.clouderwork.com/">z.clouderwork.com</a>
+      <p>
+        <span class="detail">项目描述：</span>负责业务层代码开发、组件开发，项目中导航打破传统使用特殊字体，前端在为了保持网站性能下使用了特殊字体文件
+      </p>
+      <p>
+        <span class="detail">涉及技能：</span>
+        <label>html</label>
+        <label>scss</label>
+        <label>vue2.0</label>
+        <label>vue-router</label>
+        <label>webpack</label>
+        <label>git</label>
+      </p>
+    </div>
     <div class="projectbox last-child">
       <span class="smalltitle">云沃客微信小程序</span>  微信APP最新版，小程序入口搜索<span>云沃客</span>
       <p>
-        <span class="detail">项目描述：</span>本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件,
-
+        <span class="detail">项目描述：</span>本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件等
       </p>
       <p>
         <span class="detail">涉及技能：</span>
@@ -174,6 +190,5 @@
 
   <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/custom.js"></script>
-  <script type="text/javascript" src="js/backPosition.js"></script>
 </body>
 </html>
