--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/custom.js"></script>
+  <!-- <script type="text/javascript" src="js/backPosition.js"></script> -->
 </body>
 </html>
