--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 个人信息 -->
     <h2 class="title" id="info">牛苗苗</h2>
     <div class="iconbox">
-      <a class="socialIcon" id="personPhoto"></a>
+      <a class="socialIcon"></a>
     </div>
     <div class="person-info">
       <p><b>申请职位：</b>前端工程师</p>
@@ -55,8 +55,11 @@
       </div>
       <div class="right">
         <ul>
-          <li>负责业务层代码，前端数据输出，与后端工程师沟通调试接口数据</li>
-          <li>承担公司日常PC站业务开发，手机站开发，承担日常线上运营活动开发。</li>
+          <li>将设计的方案按标准切割网页并搭建网站框架，实现网站前台效果</li>
+          <li>解决不同浏览器不同版本的兼容问题</li>
+          <li>负责前端数据输出和JS等互动效果实现，与后端工程师沟通调试数据接口</li>
+          <li>参与公司线上产品的评审，评估，制定前端解决方案，优化网站</li>
+          <li>承担公司日常PC站业务开发，手机站开发，承担日常线上运营活动开发</li>
         </ul>
       </div>
     </div>
