--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><b>邮箱：</b>515454453@qq.com</p>
     </div>
     <div class="person-info">
-        <b>个人简介：</b>现公司使用webpack+vue(1.0,2.0)开发一年，vue全家桶没什么问题，有4年的互联网开发经验，熟悉webpack配置，可以独立承担项目
+        <b>个人简介：</b>现公司使用webpack+vue(1.0,2.0)开发一年，vue全家桶没什么问题，有4年的互联网开发经验，两年前端开发经验，熟悉webpack配置，可以独立承担模块开发
     </div>
     <!-- 掌握技能 -->
     <h2 class="title" id="skills">掌握技能</h2>
