--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <div class="right">
         <ul>
           <li>将设计的方案按标准切割网页并搭建网站框架，实现网站前台效果</li>
-          <li>解决不同浏览器不同版本的兼容问题</li>
+          <li>与设计、产品人员沟通，保证产品的质量和开发进度</li>
+          <li>优化前端性能，确保web用户界面在多浏览器环境中正常工作</li>
           <li>负责前端数据输出和JS等互动效果实现，与后端工程师沟通调试数据接口</li>
           <li>参与公司线上产品的评审，评估，制定前端解决方案，优化网站</li>
-          <li>承担公司日常PC站业务开发，手机站开发，承担日常线上运营活动开发</li>
         </ul>
       </div>
     </div>
@@ -80,10 +80,10 @@
       </div>
       <div class="right">
         <ul>
-          <li>负责产品的前端页面开发和优化</li>
-          <li>与设计、产品人员沟通，保证产品的质量和开发进度</li>
-          <li>优化前端性能，确保web用户界面在多浏览器环境中正常工作</li>
-          <li>负责与后端工程师沟通协作，调试数据接口</li>
+          <li>根据PSD设计图，使用html和css制作静态页面。</li>
+          <li>使用js完成页面的动画效果，使用ajax将数据动态绑定以及后台交互。</li>
+          <li>确保网站在多个主流浏览器上实现良好兼容，使拥有良好的用户体验。</li>
+          <li>与后台开发人员协作，规范各种接口代码，完成交互操作。</li>
         </ul>
       </div>
     </div>
@@ -95,8 +95,10 @@
       </div>
       <div class="right">
         <ul>
-          <li>负责公司模板网站网页设计与前端代码设计</li>
-          <li>配合后台开发人员实现产品界面和功能。</li>
+          <li>Web前端网站产品设计/开发/维护</li>
+          <li>应用新技术，设计开发极具用户体验的手机网站</li>
+          <li>同后端工程师紧密合作，高效地完成开发工作</li>
+          <li>分析、优化网站前端性能，为用户提供更好的体验</li>
         </ul>
       </div>
     </div>
