--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>苗苗</title>
+  <meta charset="UTF-8">
+  <title>苗苗</title>
 </head>
 <link rel="stylesheet" type="text/css" href="../css/main.css">
+
 <body>
-	<div class="main">
-  <!-- 个人信息 -->
+  <div class="main">
+    <!-- 个人信息 -->
     <h2 class="title" id="info">牛苗苗</h2>
     <div class="iconbox">
       <a class="socialIcon"></a>
@@ -21,12 +23,12 @@
     </div>
     <h2 class="title" id="info">个人简介</h2>
     <div class="introBox">
-      <p>1、现公司使用webpack+vue(1.0,2.0)开发一年，vue全家桶没什么问题，有4年前端开发经验，熟悉webpack配置，可以独立承担项目开发</p>
-      <p>2、使用原生JavaScript、Jquery、Js插件完成页面的动画效果</p>
-      <p>3、确保网站在多个主流浏览器上实现良好兼容，使拥有良好的用户体验</p>
+      <p>1、熟练使用vue全家桶实现pc端功能，深入理解MVVM及MVC模式</p>
+      <p>2、熟练使用element基于Vue 2.0 的前端组件库; echarts图表</p>
+      <p>3、熟练使用vue框架，通过cli脚手架构建项目，配合element等ui框架进行开发</p>
       <p>4、应用流行框架进行模块化开发，使用代码压缩工具，代码自动化构建工具，优化页面，提高页面性能</p>
-      <p>5、与后台完成数据交互，调试界面，规范各种接口代码，完成数据交互操作</p>
-      <p>6、配合测试人员，解决测试工作中出现的bug</p>
+      <p>5、熟练使用webpack打包;熟练使用git,svn常用管理工具;</p>
+      <p>6、深入理解原生js，熟练掌握js的面向对象、闭包、代码重构等</p>
     </div>
     <!-- 掌握技能 -->
     <h2 class="title" id="skills">掌握技能</h2>
@@ -58,8 +60,8 @@
     <h2 class="title" id="expre">工作经历</h2>
     <div class="exprebox">
       <div class="left">
-        北京云族佳科技有限公司<br/>
-        2015.10--至今<br/>
+        北京云族佳科技有限公司<br />
+        2015.10--至今<br />
         前端工程师
       </div>
       <div class="right">
@@ -74,8 +76,8 @@
     </div>
     <div class="exprebox">
       <div class="left">
-        北京百金贷科技有限公司<br/>
-        2014.11--2015.9 <br/>
+        北京百金贷科技有限公司<br />
+        2014.11--2015.9 <br />
         前端工程师
       </div>
       <div class="right">
@@ -89,8 +91,8 @@
     </div>
     <div class="exprebox last-child">
       <div class="left">
-        河南锐之旗信息技术有限公司<br/>
-        2012.07--2014.10<br/>
+        河南锐之旗信息技术有限公司<br />
+        2012.07--2014.10<br />
         网页设计师
       </div>
       <div class="right">
@@ -105,30 +107,33 @@
     <!-- 项目经验 -->
     <h2 class="title" id="project">项目经验</h2>
     <div class="projectbox">
-    <span class="smalltitle">云沃客</span> <a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
+      <span class="smalltitle">云沃客</span> <a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
       <p>
-        <span class="detail">项目描述：</span>这是一个IT软件众包平台。众多与软件开发、产品设计、系统运维相关的开发项目在云沃客发布,海量IT精英在线接包。线上找人发项目，按工作方式签订对应合同，最终实现远程办公。
+        <span
+          class="detail">项目描述：</span>这是一个IT软件众包平台。众多与软件开发、产品设计、系统运维相关的开发项目在云沃客发布,海量IT精英在线接包。线上找人发项目，按工作方式签订对应合同，最终实现远程办公。
       </p>
-        <p class="detail">涉及技能：</p>
-        <p>1、使用HTML加CSS进行基本的页面布局，HTML5进行更好的页面优化以及CSS3.0进行部分动画特效的实现</p>
-        <p>2、使用VUE进行双向数据操作，组件抽离</p>
-        <p>3、VUE-Validata进行表单验证</p>
-        <p>4、利用cookie进行本地缓存</p>
-        <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
-        <p>6、webpack进行前端包管理，python环境下启动本地服务,git进行代码管理</p>
+      <p class="detail">涉及技能：</p>
+      <p>1、使用HTML加CSS进行基本的页面布局，HTML5进行更好的页面优化以及CSS3.0进行部分动画特效的实现</p>
+      <p>2、使用VUE进行双向数据操作，组件抽离</p>
+      <p>3、VUE-Validata进行表单验证</p>
+      <p>4、利用cookie进行本地缓存</p>
+      <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
+      <p>6、webpack进行前端包管理，python环境下启动本地服务,git进行代码管理</p>
     </div>
     <div class="projectbox">
-      <span class="smalltitle">云沃客m站</span>  手机访问<a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
+      <span class="smalltitle">云沃客m站</span> 手机访问<a target="_blank"
+        href="https://www.clouderwork.com">www.clouderwork.com</a>
       <p>
-        <span class="detail">项目描述：</span>负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
+        <span
+          class="detail">项目描述：</span>负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
       </p>
-        <p class="detail">涉及技能：</p>
-        <p>1、应用html+css进行静态页开发</p>
-        <p>2、使用VUE进行双向数据操作，组件抽离</p>
-        <p>3、Jquery进行输入验证</p>
-        <p>4、利用Vuex进行本地缓存</p>
-        <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
-        <p>6、应用rem+媒体查询，适配主流移动设备屏幕尺寸，以此完成移动端页面布局</p>
+      <p class="detail">涉及技能：</p>
+      <p>1、应用html+css进行静态页开发</p>
+      <p>2、使用VUE进行双向数据操作，组件抽离</p>
+      <p>3、Jquery进行输入验证</p>
+      <p>4、利用Vuex进行本地缓存</p>
+      <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
+      <p>6、应用rem+媒体查询，适配主流移动设备屏幕尺寸，以此完成移动端页面布局</p>
     </div>
     <div class="projectbox last-child">
       <span class="smalltitle">云沃客后台管理系统</span>
@@ -136,27 +141,15 @@
         <span class="detail">项目描述：</span>主站后台项目，主要是数据的统计与展示，负责页面应用搭建、业务代码开发，组件开发
       </p>
       <p class="detail">涉及技能：</p>
-        <p>1、使有UI框架Element进行界面布局</p>
-        <p>2、采用Vue-Router控制路由跳转及参数获取</p>
-        <p>3、使用Chart.js进行数据图形化展示</p>
-    </div>
-    <!-- 在么 -->
-    <div class="projectbox">
-    <span class="smalltitle">在么社区</span>
-      <a target="_blank" href="https://z.clouderwork.com/">z.clouderwork.com</a>
-      <p>
-        <span class="detail">项目描述：</span>基于主站的一个问答网站，主要有文章列表，问答列表，个人中心，个人设置版块，
-      </p>
-      <p class="detail">涉及技能：</p>
-      <p>1、 根据PSD设计图，使用html和css制作静态页面。</p>
-      <p>2、 Vue进行数据绑定实现页面展示效果</p>
-      <p>3、 修复测试部门测试出来的bug。</p>
-      <p>4、 处理网页后期维护和更新升级网页工作。</p>
+      <p>1、使有UI框架Element进行界面布局</p>
+      <p>2、采用Vue-Router控制路由跳转及参数获取</p>
+      <p>3、使用Chart.js进行数据图形化展示</p>
     </div>
     <div class="projectbox last-child">
-      <span class="smalltitle">云沃客微信小程序</span>  微信APP最新版，小程序入口搜索<span>云沃客</span>
+      <span class="smalltitle">云沃客微信小程序</span> 微信APP最新版，小程序入口搜索<span>云沃客</span>
       <p>
-        <span class="detail">项目详情：</span>本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件等
+        <span
+          class="detail">项目详情：</span>本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件等
       </p>
       <p>
         <span class="detail">涉及技能：</span>
@@ -181,4 +174,5 @@
     </div>
   </div>
 </body>
+
 </html>
