--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,178 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>苗苗</title>
+  </head>
+  <link rel="stylesheet" type="text/css" href="../css/main.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <title>苗苗</title>
-</head>
-<link rel="stylesheet" type="text/css" href="../css/main.css">
-
-<body>
-  <div class="main">
-    <!-- 个人信息 -->
-    <h2 class="title" id="info">牛苗苗</h2>
-    <div class="iconbox">
-      <a class="socialIcon"></a>
-    </div>
-    <div class="person-info">
-      <p><b>申请职位：</b>前端工程师</p>
-      <p><b>年龄：</b>26</p>
-      <p><b>住址：</b>北京市昌平区天通苑</p>
-      <p><b>电话：</b>18519011499</p>
-      <p><b>邮箱：</b>515454453@qq.com</p>
-    </div>
-    <h2 class="title" id="info">个人简介</h2>
-    <div class="introBox">
-      <p>1、熟练使用vue全家桶实现pc端功能，深入理解MVVM及MVC模式</p>
-      <p>2、熟练使用element基于Vue 2.0 的前端组件库; echarts图表</p>
-      <p>3、熟练使用vue框架，通过cli脚手架构建项目，配合element等ui框架进行开发</p>
-      <p>4、应用流行框架进行模块化开发，使用代码压缩工具，代码自动化构建工具，优化页面，提高页面性能</p>
-      <p>5、熟练使用webpack打包;熟练使用git,svn常用管理工具;</p>
-      <p>6、深入理解原生js，熟练掌握js的面向对象、闭包、代码重构等</p>
-    </div>
-    <!-- 掌握技能 -->
-    <h2 class="title" id="skills">掌握技能</h2>
-    <div class="skillbox">
-      <div class="basicintro">
-        <label class="color1"></label>掌握
-        <label class="color2"></label>了解
+  <body>
+    <div class="main">
+      <!-- 个人信息 -->
+      <h2 class="title" id="info">牛苗苗</h2>
+      <div class="iconbox">
+        <a class="socialIcon"></a>
       </div>
-      <p class="skill-title">基础部分：</p>
-      <span class="skills1">PhotoShop</span>
-      <span class="skills1">HTML</span>
-      <span class="skills1">CSS(Sass,Less,PostScss)</span>
-      <span class="skills1">Javascript</span>
-      <p class="skill-title">框架部分：</p>
-      <span class="skills1">Jquery</span>
-      <span class="skills1">Bootstrap</span>
-      <span class="skills1">Element</span>
-      <span class="skills1">Vue.js</span>
-      <span class="skills1">Vue-router</span>
-      <span class="skills2">Node.js</span>
-      <span class="skills2">Angular.js</span>
-      <p class="skill-title">前端工具&其他：</p>
-      <span class="skills1">es6</span>
-      <span class="skills1">微信小程序</span>
-      <span class="skills1">Webpack</span>
-      <span class="skills1">Git</span>
-    </div>
-    <!-- 工作经历 -->
-    <h2 class="title" id="expre">工作经历</h2>
-    <div class="exprebox">
-      <div class="left">
-        北京云族佳科技有限公司<br />
-        2015.10--至今<br />
-        前端工程师
+      <div class="person-info">
+        <p><b>申请职位：</b>前端工程师</p>
+        <p><b>住址：</b>北京市昌平区回龙观</p>
+        <p><b>电话：</b>18519011499</p>
+        <p><b>邮箱：</b>515454453@qq.com</p>
       </div>
-      <div class="right">
-        <ul>
-          <li>将设计的方案按标准切割网页并搭建网站框架，实现网站前台效果</li>
-          <li>与设计、产品人员沟通，保证产品的质量和开发进度</li>
-          <li>优化前端性能，确保web用户界面在多浏览器环境中正常工作</li>
-          <li>负责前端数据输出和JS等互动效果实现，与后端工程师沟通调试数据接口</li>
-          <li>参与公司线上产品的评审，评估，制定前端解决方案，优化网站</li>
-        </ul>
+      <h2 class="title" id="info">个人简介</h2>
+      <div class="introBox">
+        <p>1、掌握前端安全预防及性能优化。</p>
+        <p>2、熟练掌握Vue前端框架，具备根据应用场景灵活封闭前端组件的能力。</p>
+        <p>3、参与各种项目开发环节，提供前端解决方案</p>
+        <p>5、熟练使用webpack打包;熟练使用git,svn常用管理工具;</p>
+        <p>6、深入理解原生js，熟练掌握js的面向对象、闭包、代码重构等</p>
+      </div>
+      <!-- 掌握技能 -->
+      <h2 class="title" id="skills">掌握技能</h2>
+      <div class="skillbox">
+        <p class="skill-title">基础部分：</p>
+        <span class="skills1">PhotoShop</span>
+        <span class="skills1">HTML</span>
+        <span class="skills1">CSS(Sass,Less,PostScss)</span>
+        <span class="skills1">Javascript</span>
+        <p class="skill-title">框架部分：</p>
+        <span class="skills1">Jquery</span>
+        <span class="skills1">Echarts</span>
+        <span class="skills1">Element</span>
+        <span class="skills1">Vue.js</span>
+        <span class="skills1">Vue-router</span>
+        <span class="skills2">Node.js</span>
+        <span class="skills2">Angular.js</span>
+        <p class="skill-title">前端工具&其他：</p>
+        <span class="skills1">es6</span>
+        <span class="skills1">微信小程序</span>
+        <span class="skills1">Webpack</span>
+        <span class="skills1">Git</span>
+      </div>
+      <!-- 工作经历 -->
+      <h2 class="title" id="expre">工作经历</h2>
+      <div class="exprebox">
+        <div class="left">
+          长安通信科技有限责任公司<br />
+          2017.5--至今<br />
+          前端工程师
+        </div>
+        <div class="right">
+          <ul>
+            <li>
+              充分理解需求，高UI还原度。负责前端核心业务模块的研发和维护。
+            </li>
+            <li>解决前端开发过程中的疑难问题</li>
+            <li>及时分析并解决线上系统的各类疑难问题</li>
+            <li>研究前研的前端技术，为项目提供更丰富的交互及更佳的性能。</li>
+          </ul>
+        </div>
+      </div>
+      <div class="exprebox">
+        <div class="left">
+          北京云族佳科技有限公司<br />
+          2015.10--2017.5<br />
+          前端工程师
+        </div>
+        <div class="right">
+          <ul>
+            <li>将设计的方案按标准切割网页并搭建网站框架，实现网站前台效果</li>
+            <li>与设计、产品人员沟通，保证产品的质量和开发进度</li>
+            <li>优化前端性能，确保web用户界面在多浏览器环境中正常工作</li>
+            <li>
+              负责前端数据输出和JS等互动效果实现，与后端工程师沟通调试数据接口
+            </li>
+            <li>参与公司线上产品的评审，评估，制定前端解决方案，优化网站</li>
+          </ul>
+        </div>
+      </div>
+      <div class="exprebox">
+        <div class="left">
+          北京百金贷科技有限公司<br />
+          2014.11--2015.9 <br />
+          前端工程师
+        </div>
+        <div class="right">
+          <ul>
+            <li>根据PSD设计图，使用html和css制作静态页面。</li>
+            <li>
+              使用js完成页面的动画效果，使用ajax将数据动态绑定以及后台交互。
+            </li>
+            <li>
+              确保网站在多个主流浏览器上实现良好兼容，使拥有良好的用户体验。
+            </li>
+            <li>与后台开发人员协作，规范各种接口代码，完成交互操作。</li>
+          </ul>
+        </div>
+      </div>
+      <div class="exprebox last-child">
+        <div class="left">
+          河南锐之旗信息技术有限公司<br />
+          2012.07--2014.10<br />
+          网页设计师
+        </div>
+        <div class="right">
+          <ul>
+            <li>Web前端网站产品设计/开发/维护</li>
+            <li>应用新技术，设计开发极具用户体验的手机网站</li>
+            <li>同后端工程师紧密合作，高效地完成开发工作</li>
+            <li>分析、优化网站前端性能，为用户提供更好的体验</li>
+          </ul>
+        </div>
+      </div>
+      <!-- 项目经验 -->
+      <h2 class="title" id="project">项目经验</h2>
+      <div class="projectbox">
+        <span class="smalltitle">云沃客</span>
+        <a target="_blank" href="https://www.clouderwork.com"
+          >www.clouderwork.com</a
+        >
+        <p>
+          <span class="detail">项目描述：</span
+          >这是一个IT软件众包平台。众多与软件开发、产品设计、系统运维相关的开发项目在云沃客发布,海量IT精英在线接包。线上找人发项目，按工作方式签订对应合同，最终实现远程办公。
+        </p>
+        <p class="detail">涉及技能：</p>
+        <p>
+          1、使用HTML加CSS进行基本的页面布局，HTML5进行更好的页面优化以及CSS3.0进行部分动画特效的实现
+        </p>
+        <p>2、使用VUE进行双向数据操作，组件抽离</p>
+        <p>3、VUE-Validata进行表单验证</p>
+        <p>4、利用cookie进行本地缓存</p>
+        <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
+        <p>
+          6、webpack进行前端包管理，python环境下启动本地服务,git进行代码管理
+        </p>
+      </div>
+      <div class="projectbox">
+        <span class="smalltitle">云沃客m站</span> 手机访问<a
+          target="_blank"
+          href="https://www.clouderwork.com"
+          >www.clouderwork.com</a
+        >
+        <p>
+          <span class="detail">项目描述：</span
+          >负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
+        </p>
+        <p class="detail">涉及技能：</p>
+        <p>1、应用html+css进行静态页开发</p>
+        <p>2、使用VUE进行双向数据操作，组件抽离</p>
+        <p>3、Jquery进行输入验证</p>
+        <p>4、利用Vuex进行本地缓存</p>
+        <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
+        <p>
+          6、应用rem+媒体查询，适配主流移动设备屏幕尺寸，以此完成移动端页面布局
+        </p>
+      </div>
+      <div class="projectbox last-child">
+        <span class="smalltitle">云沃客后台管理系统</span>
+        <p>
+          <span class="detail">项目描述：</span
+          >主站后台项目，主要是数据的统计与展示，负责页面应用搭建、业务代码开发，组件开发
+        </p>
+        <p class="detail">涉及技能：</p>
+        <p>1、使有UI框架Element进行界面布局</p>
+        <p>2、采用Vue-Router控制路由跳转及参数获取</p>
+        <p>3、使用Chart.js进行数据图形化展示</p>
+      </div>
+      <div class="projectbox last-child">
+        <span class="smalltitle">云沃客微信小程序</span>
+        微信APP最新版，小程序入口搜索<span>云沃客</span>
+        <p>
+          <span class="detail">项目详情：</span
+          >本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件等
+        </p>
+        <p>
+          <span class="detail">涉及技能：</span>
+          <label>html</label>
+          <label>css</label>
+          <label>微信小程序</label>
+          <label>git</label>
+        </p>
+      </div>
+      <!-- 教育经历 -->
+      <h2 class="title" id="edu">教育经历</h2>
+      <div class="edubox">
+        <div class="left">郑州师范学院</div>
+        <div class="right">2010.9--2013.6</div>
+        <div class="right">计算机网络</div>
       </div>
     </div>
-    <div class="exprebox">
-      <div class="left">
-        北京百金贷科技有限公司<br />
-        2014.11--2015.9 <br />
-        前端工程师
-      </div>
-      <div class="right">
-        <ul>
-          <li>根据PSD设计图，使用html和css制作静态页面。</li>
-          <li>使用js完成页面的动画效果，使用ajax将数据动态绑定以及后台交互。</li>
-          <li>确保网站在多个主流浏览器上实现良好兼容，使拥有良好的用户体验。</li>
-          <li>与后台开发人员协作，规范各种接口代码，完成交互操作。</li>
-        </ul>
-      </div>
-    </div>
-    <div class="exprebox last-child">
-      <div class="left">
-        河南锐之旗信息技术有限公司<br />
-        2012.07--2014.10<br />
-        网页设计师
-      </div>
-      <div class="right">
-        <ul>
-          <li>Web前端网站产品设计/开发/维护</li>
-          <li>应用新技术，设计开发极具用户体验的手机网站</li>
-          <li>同后端工程师紧密合作，高效地完成开发工作</li>
-          <li>分析、优化网站前端性能，为用户提供更好的体验</li>
-        </ul>
-      </div>
-    </div>
-    <!-- 项目经验 -->
-    <h2 class="title" id="project">项目经验</h2>
-    <div class="projectbox">
-      <span class="smalltitle">云沃客</span> <a target="_blank" href="https://www.clouderwork.com">www.clouderwork.com</a>
-      <p>
-        <span
-          class="detail">项目描述：</span>这是一个IT软件众包平台。众多与软件开发、产品设计、系统运维相关的开发项目在云沃客发布,海量IT精英在线接包。线上找人发项目，按工作方式签订对应合同，最终实现远程办公。
-      </p>
-      <p class="detail">涉及技能：</p>
-      <p>1、使用HTML加CSS进行基本的页面布局，HTML5进行更好的页面优化以及CSS3.0进行部分动画特效的实现</p>
-      <p>2、使用VUE进行双向数据操作，组件抽离</p>
-      <p>3、VUE-Validata进行表单验证</p>
-      <p>4、利用cookie进行本地缓存</p>
-      <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
-      <p>6、webpack进行前端包管理，python环境下启动本地服务,git进行代码管理</p>
-    </div>
-    <div class="projectbox">
-      <span class="smalltitle">云沃客m站</span> 手机访问<a target="_blank"
-        href="https://www.clouderwork.com">www.clouderwork.com</a>
-      <p>
-        <span
-          class="detail">项目描述：</span>负责业务代码开发、组件开发，完全的前后端分离，前端后段同步开发，即解耦，又不影响开发速率；单页应用让请求次数变少、页面呈现更快，用户体验好，而且不受数据库制约，能实现更多的业务逻辑
-      </p>
-      <p class="detail">涉及技能：</p>
-      <p>1、应用html+css进行静态页开发</p>
-      <p>2、使用VUE进行双向数据操作，组件抽离</p>
-      <p>3、Jquery进行输入验证</p>
-      <p>4、利用Vuex进行本地缓存</p>
-      <p>5、使用Jquery封装ajax进行后台数据获取，进行产品的加载以及刷新</p>
-      <p>6、应用rem+媒体查询，适配主流移动设备屏幕尺寸，以此完成移动端页面布局</p>
-    </div>
-    <div class="projectbox last-child">
-      <span class="smalltitle">云沃客后台管理系统</span>
-      <p>
-        <span class="detail">项目描述：</span>主站后台项目，主要是数据的统计与展示，负责页面应用搭建、业务代码开发，组件开发
-      </p>
-      <p class="detail">涉及技能：</p>
-      <p>1、使有UI框架Element进行界面布局</p>
-      <p>2、采用Vue-Router控制路由跳转及参数获取</p>
-      <p>3、使用Chart.js进行数据图形化展示</p>
-    </div>
-    <div class="projectbox last-child">
-      <span class="smalltitle">云沃客微信小程序</span> 微信APP最新版，小程序入口搜索<span>云沃客</span>
-      <p>
-        <span
-          class="detail">项目详情：</span>本项目用3天时间开发完成，一路踩坑到底，小程序提供的API与VUE有很多相似之处，上手很快，使用它本身的组件，有很多达不到产品预期功能，所以在开发的时候也自义定了一些，例如登录页的TabBar,通过scrollview来实现上拉加载更多,没有触发加载更多的事件等
-      </p>
-      <p>
-        <span class="detail">涉及技能：</span>
-        <label>html</label>
-        <label>css</label>
-        <label>微信小程序</label>
-        <label>git</label>
-      </p>
-    </div>
-    <!-- 教育经历 -->
-    <h2 class="title" id="edu">教育经历</h2>
-    <div class="edubox">
-      <div class="left">
-        郑州师范学院
-      </div>
-      <div class="right">
-        2010.9--2013.6
-      </div>
-      <div class="right">
-        计算机网络
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
